--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "date-fns": "^4.1.0",
     "i18next": "^24.1.0",
     "keytar": "^7.9.0",
+    "open": "^11.0.0",
     "ora": "^8.1.1",
     "p-limit": "^6.2.0",
     "simple-git": "^3.27.0",
