--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,15 @@
     }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-non-null-assertion": "error",
-    "no-console": "warn"
+    "no-console": "error"
   },
+  "overrides": [
+    {
+      "files": ["src/utils/logger.ts"],
+      "rules": {
+        "no-console": "off"
+      }
+    }
+  ],
   "ignorePatterns": ["dist/", "node_modules/", "*.js"]
 }
