--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
   "dependencies": {
     "@inquirer/prompts": "^7.2.0",
     "axios": "^1.13.2",
+    "boxen": "^8.0.1",
     "chalk": "^5.4.0",
+    "cli-progress": "^3.12.0",
     "cli-table3": "^0.6.5",
     "commander": "^14.0.2",
     "conf": "^13.0.1",
@@ -68,6 +70,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@types/cli-progress": "^3.11.6",
     "@types/keytar": "^4.4.2",
     "@types/node": "^22.10.2",
     "@vitest/coverage-v8": "^2.1.8",
